--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: UCLA CS269 Human AI Projects
-name: "UCLA CS269 Human AI Projects"
+name: "UCLA CS269 Human-centered AI - Projects"
 author: UCLAdeepvision
-baseurl: "/humanAI-projects-2022Spring"
+baseurl: "/CS269-projects-2022spring"
 description: Course projects for UCLA CS269s
 profile_url: "http://UCLAdeepvision.github.io"
 
