--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: UCLA CS269 Human AI Projects
-name: "UCLA CS269 Human-centered AI - Projects"
+title: UCLA CS269 Human-centered AI -- Projects
+name: "UCLA CS269 Human-centered AI -- Projects"
 author: UCLAdeepvision
 baseurl: "/CS269-projects-2022spring"
 description: Course projects for UCLA CS269s
